# c-mdn-mock-wrapper

./: CMakeLists.txt  CMakePresets.json
cmake/: utils.cmake
src/: CMakeLists.txt
src/mock_wrapper/: CMakeLists.txt  mock_wrapper.cpp
src/mock_wrapper/include/: mock_wrapper.h  mock_wrapper.hpp
src/mock_wrapper/include/mdn/: mock_wrapper.h  mock_wrapper.hpp
test/: CMakeLists.txt
test/mock_wrapper_test/: CMakeLists.txt  mock_wrapper_test.cpp
